feat: changed styles

--- a/styles.css
+++ b/styles.css
@@ -269,11 +269,11 @@ nav {
     padding-left: 200px;
     width: auto;
 }
-.github {
+/* .github {
     display: flex;
 }
 
 .fab fa-github {
     width: 37px;
     height: 44px;
-}
+} */
